pre deployment ready

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/veleda3/event_server.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/veleda3/event_server.git"
+  },
   "author": "Daniel Velez",
   "license": "MIT",
   "dependencies": {
@@ -12,5 +15,15 @@
     "graphql": "^0.13.2",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.7"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/veleda3/event_server/issues"
+  },
+  "homepage": "https://github.com/veleda3/event_server#readme",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node App.js"
+  },
+  "description": ""
 }
